<resources>
    <string name="app_name">JFL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Default message</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="dismiss">Dismiss</string>
    <string name="feature_not_available">Coming Soon</string>
    <string name="username">Username</string>
    <string name="back">Back</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_email">Please enter Email address</string>
    <string name="enter_email">Enter your Email address</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_password">Please provide your password</string>
    <string name="register">Register</string>
    <string name="sign_up">SignUp</string>
    <string name="sign_in_email">Sign In with your email address</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="check_your_connection_refresh">Check your connection,then refresh the page</string>
    <string name="rationale_desc">This app relies on read access to your contacts.
We require access to this permission to find your contacts in our database and suggest people you may know.
We will not store any contact info in our data base if they are not a part of our platform.
For further info read our privacy policy.</string>
    <string name="app_needs_">App needs your permission</string>
    <string name="message_content">message_content</string>
    <string name="cancel">Cancel</string>
    <string name="give_access">Give access</string>
    <string name="settings">Settings</string>

    <string name="facebook_app_id">12345</string>
    <string name="fb_login_protocol_scheme">fb12345</string>
    <string name="facebook_client_token">gdgffjgbxg</string>
    <string name="empty_phone">Please enter mobile number</string>
    <string name="invalid_phone">Invalid Mobile number</string>
    <string name="empty_first_name">Please enter the name</string>
    <string name="empty_last_name">Please enter last name</string>
    <string name="alert_password_strength">Minimum password strength  is 6</string>
    <string name="forgot_password_text">Please enter your email associated with your account. We will send you the verification code to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="please_sign_in">Please sign in to your existing account</string>
    <string name="please_sign_up">Please sign up to create an account</string>
    <string name="dont_have_account">"Dont’t  have an account ? "</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">"Already Have An Account ? "</string>
    <string name="OTP">OTP</string>
    <string name="enter_otp_label"><![CDATA[Enter 4-digit code we have sent to your\nPhone number & Email.]]></string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="change_password">Change Password</string>
    <string name="password_mismatch">Passwords do not match. Please check again.</string>
    <string name="tournament">Asia Cup</string>
    <string name="price_pool">Price Pool</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="rank">Rank</string>
    <string name="winnings">Winnings</string>
    <string name="create_team">Create Team</string>
    <string name="players">Players</string>
    <string name="credit_left">Credit Left</string>
    <string name="points">Points</string>
    <string name="credits">Credits</string>
    <string name="preview">Preview</string>
    <string name="next">Next</string>
    <string name="choose_captain">Choose your Captain and Vice Captain</string>
    <string name="save">Save</string>
    <string name="published_successfully">Team Created</string>
    <string name="team_created">Your team has been created successfully.</string>
    <string name="no_matches">No Matches</string>
    <string name="upcoming">Upcoming</string>
    <string name="batter">Batter</string>
    <string name="live">Live</string>
    <string name="contestents">Contestants</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
</resources>