<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/teal_200"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_lay"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tx_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:text="@string/app_needs_"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/main_lay"
                app:layout_constraintStart_toStartOf="@+id/main_lay"
                app:layout_constraintTop_toTopOf="@+id/main_lay" />

            <TextView
                android:id="@+id/tx_msg_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                    android:paddingHorizontal="15dp"
                android:maxLines="3"
                android:text="@string/message_content"
                app:layout_constraintEnd_toEndOf="@+id/main_lay"
                app:layout_constraintStart_toStartOf="@+id/main_lay"
                app:layout_constraintTop_toBottomOf="@+id/tx_tittle" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/main_lay"
                app:layout_constraintEnd_toStartOf="@+id/tv_action"
                app:layout_constraintTop_toTopOf="@+id/tv_action" />

            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:text="@string/give_access"
                app:layout_constraintBottom_toBottomOf="@+id/main_lay"
                app:layout_constraintEnd_toEndOf="@+id/main_lay" />

            <!--            <TextView-->
            <!--                android:id="@+id/tv_settings"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/settings"-->
            <!--                tools:layout_editor_absoluteX="234dp"-->
            <!--                tools:layout_editor_absoluteY="156dp" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>