<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.newagesmb.androidmvvmarchitecture.data.remote.nework.Resource" />

        <import type="android.view.View" />
          <variable
              name="isLoading"
              type="Boolean"
              android:value="false"
              />
        <variable
            name="resource"
            type="Resource" />
        <variable
            name="callback"
            type="com.newagesmb.androidmvvmarchitecture.utils.RetryCallback" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="@{isLoading?View.VISIBLE:View.GONE}"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--        style="@style/Widget.Material3.Button.OutlinedButton"-->

        <Button

            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/refresh"
            android:onClick="@{() -> callback.retry()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
<!--        android:visibility="@{isLoading?View.VISIBLE:View.GONE}"-->
        <ImageView
            android:id="@+id/imageView"

            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/error_tittle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_network" />

        <TextView
            android:id="@+id/error_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="4dp"
            android:textColor="@color/purple_500"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/error_msg"
            app:layout_constraintEnd_toEndOf="@+id/error_msg"
            app:layout_constraintStart_toStartOf="@+id/error_msg" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:text="@string/check_your_connection_refresh"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>
        <!--        <com.google.android.material.button.MaterialButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:ignore="MissingConstraints" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
